tests/golden/type_errors/array_find_index_callback_return.cd
findIndex([1], fun (value: number): number { return 1; });
