tests/golden/type_errors/array_find_index_callback_return.err
Type error at 1:37: function `<lambda>` expects return bool, got number
  findIndex([1], fun (value: number): number { return 1; });
                                      ^
